examples/test/conf/TLSRoute/Basic/01_Gateway.yaml
# Gateway for TLSRoute basic testing
# TLS terminate to TCP backend
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-route-basic-gw
  namespace: edgion-test
  annotations:
    edgion.io/backend-protocol: "tcp"
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: tls-basic
      protocol: TLS
      port: 31280
      hostname: "*.sandbox.example.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: edge-tls
            namespace: edgion-test
