examples/test/conf/TLSRoute/Basic/02_EdgionTls.yaml
# EdgionTls wildcard certificate for TLSRoute testing
apiVersion: edgion.io/v1
kind: EdgionTls
metadata:
  name: tls-route-basic-cert
  namespace: edgion-test
spec:
  parentRefs:
    - name: tls-route-basic-gw
      namespace: edgion-test
      sectionName: tls-basic
  hosts:
    - "*.sandbox.example.com"
  secretRef:
    name: edge-tls
    namespace: edgion-test
